# baryon

./: Cargo.toml  README.md
src/: app.rs  ecs.rs  io.rs  lib.rs  main.rs
src/core/: constants.rs  coords.rs  mod.rs  path.rs
src/ecs/: chunk.rs  id.rs  mod.rs  registry.rs
src/engine/: clipboard.rs  core.rs  folding.rs  layout.rs  minimap.rs  mod.rs  support.rs  undo.rs
src/svp/: diagnostic.rs  highlight.rs  ingest.rs  mod.rs  parse.rs  pipeline.rs  pointer.rs  projector.rs  resolver.rs  semantic.rs  sync.rs
src/svp/tests/: mod.rs  parse.rs  sync.rs
src/uast/: kind.rs  metrics.rs  mod.rs  mutation.rs  projection.rs  topology.rs
src/ui/: colors.rs  command.rs  core.rs  draw.rs  frontend.rs  insert.rs  minimap.rs  mod.rs  mouse.rs  normal.rs  settings.rs  startup.rs  theme.rs  visual.rs
tests/: architecture_test.rs
