[package]
name = "baryon"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-queue = "0.3.12"
crossterm = "0.29.0"
io-uring = "0.7.11"
libc = "0.2.183"
memchr = "2.8.0"
ra_ap_base_db = "0.0.326"
ra_ap_cfg = "0.0.326"
ra_ap_ide = "0.0.326"
ra_ap_ide_db = "0.0.326"
ra_ap_paths = "0.0.326"
ra_ap_syntax = "0.0.326"
ra_ap_vfs = "0.0.326"
triomphe = "0.1"
ratatui = "0.30.0"
rayon = "1.11.0"
regex-automata = { version = "0.4", default-features = true, features = ["meta", "perf"] }
