[package]
name = "baryon"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
crossbeam-queue = "0.3.12"
crossterm = "0.29.0"
io-uring = "0.7.11"
libc = "0.2.184"
memchr = "2.8.0"
ra_ap_base_db = "0.0.326"
ra_ap_cfg = "0.0.326"
ra_ap_ide = "0.0.326"
ra_ap_ide_db = "0.0.326"
ra_ap_paths = "0.0.326"
ra_ap_project_model = "0.0.326"
ra_ap_syntax = "0.0.326"
ra_ap_vfs = "0.0.326"
ratatui = "0.30.0"
rayon = "1.11.0"
regex-automata = { version = "0.4.14", default-features = true, features = ["meta", "perf"] }
rustc-hash = "2.1.2"
triomphe = "0.1.15"
